<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DomDoc</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="print_text">Print Text</string>
    <string name="email_text_default">email:</string>
    <string name="password_text_default">Password:</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="button_save">Save</string>

</resources>
