<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffffa5a0">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/print_text"
        android:id="@+id/printText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="144dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email_text_default"
        android:id="@+id/email_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="89dp"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password_text_default"
        android:id="@+id/password_text"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/email_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailEdit"
        android:layout_above="@+id/password_text"
        android:layout_alignLeft="@+id/printText"
        android:layout_alignStart="@+id/printText"
        android:hint="@string/hint_email"
        android:textColor="#ffffffff"
        android:textColorHint="#ffe9e9e9" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEdit"
        android:layout_alignBottom="@+id/password_text"
        android:layout_alignLeft="@+id/emailEdit"
        android:layout_alignStart="@+id/emailEdit"
        android:hint="@string/hint_password"
        android:textColor="#ffffffff"
        android:textColorHint="#ffe9e9e9" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:id="@+id/saveButton"
        android:background="#ff000000"
        android:textColor="#ffffffff"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/passwordEdit"
        android:layout_alignStart="@+id/passwordEdit" />
</RelativeLayout>
